Updates for OSX Mavericks

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 # Ignore all the bundles because the update_bundles script can just go get them from GitHub
 bundle
+
+# OSX
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must ends with two \r.
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
