Solarized for cygwin

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore all the bundles because the update_bundles script can just go get them from GitHub
 bundle
+# Ignore 3rd party packages downloaded during installation
+packages
 
 # OSX
 
