--- a/vim.yml
+++ b/vim.yml
@@ -48,3 +48,18 @@
 
     - org: tpope
       repo: vim-markdown
+
+- name: Install Neovim
+  when: "{{ ansible_distribution == 'MacOSX' }}"
+  homebrew:
+    name: neovim
+
+- name: Configure Neovim 1/2
+  file:
+    path: "{{ ansible_user_dir }}/.config/nvim"
+    state: directory
+
+- name: Config Neovim 2/2
+  copy:
+    src: init.vim
+    dest: "{{ ansible_user_dir }}/.config/nvim/init.vim"
