--- a/provision.yml
+++ b/provision.yml
@@ -2,13 +2,9 @@
 - hosts: localhost
   connection: local
   tasks:
-    - include_tasks: "{{ item }}"
-      with_items:
-        - core.yml
-        - vim.yml
-    - include_tasks: "{{ item }}"
-      when: "{{ ansible_distribution == 'MacOSX' }}"
-      with_items:
-        - macos/core.yml
-        - macos/java.yml
-
+    - include_tasks: core.yml
+    - include_tasks: zsh/zsh.yml
+    - include_tasks: java/java.yml
+    - include_tasks: vim/vim.yml
+    - include_tasks: macos/macos.yml
+      when: ansible_distribution == 'MacOSX'
