--- a/provision.yml
+++ b/provision.yml
@@ -5,6 +5,7 @@
     - include_tasks: core.yml
     - include_tasks: zsh/zsh.yml
     - include_tasks: java/java.yml
+    - include_tasks: node/node.yml
     - include_tasks: ruby/ruby.yml
     - include_tasks: vim/vim.yml
     - include_tasks: macos/macos.yml
