--- a/core/core.yml
+++ b/core/core.yml
@@ -35,7 +35,7 @@
 
 - name: Set Terminal Directory Color Scheme
   git:
-    repo: git://github.com/seebi/dircolors-solarized
+    repo: https://github.com/seebi/dircolors-solarized
     dest: "{{ ansible_user_dir }}/.dircolors"
     depth: 1
 
