--- a/provision.yml
+++ b/provision.yml
@@ -5,6 +5,8 @@
     docuum_threshold: "50 GB"
   tasks:
     - include_tasks: core/core.yml
+    - include_tasks: git/git.yml
+    - include_tasks: python/python.yml
     - include_tasks: zsh/zsh.yml
     - include_tasks: java/java.yml
     - include_tasks: node/node.yml
