--- a/provision.yml
+++ b/provision.yml
@@ -15,5 +15,5 @@
     - include_tasks: macos/macos.yml
       when: ansible_distribution == 'MacOSX'
     - include_tasks: aws/aws.yml
-      when: ansible_distribution == 'MacOSX'
     - include_tasks: docuum/docuum.yml
+    - include_tasks: 1password/1password.yml
