🚸 Add iTerm Dracula Color Scheme
Also, reorganize Dracula projects into ~/dracula

--- a/macos/macos.yml
+++ b/macos/macos.yml
@@ -5,10 +5,12 @@
     src: "{{ ansible_user_dir }}/dotfiles/macos/toggle-dark-mode.workflow"
     dest: "{{ ansible_user_dir }}/Library/Services/toggle-dark-mode.workflow"
 
+
 - name: Create Dedicated Screenshots Directory
   file:
     path: "{{ ansible_user_dir }}/Desktop/sshots"
     state: directory
+
 
 - name: Save Screenshots to Dedicated Directory
   osx_defaults:
@@ -16,11 +18,13 @@
     key: location
     value: "{{ ansible_user_dir }}/Desktop/sshots"
 
+
 - name: Link inputrc
   file:
     state: link
     src: "{{ ansible_user_dir }}/dotfiles/macos/inputrc"
     dest: "{{ ansible_user_dir }}/.inputrc"
+
 
 - name: iTerm2 imgls and imgcat
   get_url: 
@@ -31,16 +35,32 @@
     - imgcat
     - imgls
 
+
 - name: iTerm2 Shell Integration
   get_url:
     url: https://iterm2.com/shell_integration/zsh
     dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/iterm2-shell-integration.zsh"
+
+
+- name: Create Dracula Dir If Not Exists
+  file:
+    path: "{{ ansible_user_dir }}/dracula"
+    state: directory
+    mode: 0755
+
+
+- name: iTerm2 Dracula Theme
+  ansible.builtin.git:
+    repo: https://github.com/dracula/iterm.git
+    dest: "{{ ansible_user_dir }}/dracula/iterm"
+
 
 - name: macOS Specific ZSH Config
   file:
     state: link
     src: "{{ ansible_user_dir }}/dotfiles/macos/macos.zsh"
     dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/macos.zsh"
+
 
 - name: Core Brew Packages
   homebrew:
