--- a/1password/1password.yml
+++ b/1password/1password.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install 1Password CLI
-  homebrew_tap:
-    name: 1password/tap/1password-cli
+  homebrew:
+    name: 1password-cli
   when: ansible_distribution == 'MacOSX'
 
